Visual fix for link spacing aka icon spacing in contact section of site

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -103,7 +103,7 @@ main {
     }
     .social-links {
         display: inline-flex;
-        padding: 1em;
+        padding: .25em;
         margin-right: 1em;
     }
     h2 {
